minor assignment corrections

--- a/practical_lab.ipynb
+++ b/practical_lab.ipynb
@@ -420,7 +420,12 @@
     "<div class=\"alert alert-success\">\n",
     "    <b>Ejercicio</b>:\n",
     "     <ul>\n",
-    "    <li>Downsamplear a la mitad de Hz que la orginal (si no recuerdan cuanto era la frecuencia de sampleo está en info bajo sfreq)</li>\n",
+    "    <li>Downsamplear a la mitad de Hz que la orginal.</li>\n",
+    "    </ul>\n",
+    "    <br>\n",
+    "    <i>tips</i>:\n",
+    "    <ul>\n",
+    "    <li> <i>Si no recuerdan cuánto era la frecuencia de sampleo original está en .info bajo sfreq</i></li>\n",
     "    </ul>\n",
     "</div>"
    ]
@@ -848,7 +853,6 @@
     "    <i>tips</i>:\n",
     "    <ul>\n",
     "    <li> <i>Vas a tener que usar la funcion mne.Epochs</i></li>\n",
-    "    <li> <i>En mne el tiempo va en segundos no en milisegundos (ms)</i></li>\n",
     "    </ul>\n",
     "</div>"
    ]
