--- a/practical_lab_EjERCICIO.ipynb
+++ b/practical_lab_EjERCICIO.ipynb
@@ -937,11 +937,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "85bfb4fda6b6346f8eb0b60a56672a689fcee533e5a134e0cbb64ac5c7775566"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -955,7 +952,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "75d28a4c943af93f3c5ef0051379ef23950f7970d3ac2d16d44be87ff6751af7"
+   }
   }
  },
  "nbformat": 4,
