mejora de consignas

--- a/practical_lab_Humai.ipynb
+++ b/practical_lab_Humai.ipynb
@@ -620,8 +620,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotear las épocas\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Inspección visual de épocas\n",
     "\n",
@@ -636,6 +649,11 @@
     "    <li>Marcar las épocas malas (en caso que existieran)</li>\n",
     "    <li>Marcar canales malos. En caso que todos los canales estuvieran bien, de todos modos seleccionar uno de los canales (haciendo click en el canal verán que se pone de un color gris mas claro) para que luego podamos practicar interpolar canales</li>\n",
     "    </ul>\n",
+    "        <i>tips</i>:\n",
+    "    <ul>\n",
+    "    <li> <i>Incluir los eventos: events y events_id</i></li>\n",
+    "    <li> <i>Asignar colores para cada condición pasando un diccionario = {Go:'red', Nogo:'blue'}</i></li>\n",
+    "    </ul>\n",
     "</div>"
    ]
   },
@@ -645,8 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plotear las épocas\n",
-    "..."
+    "epochs..."
    ]
   },
   {
@@ -662,7 +679,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "print(epochs) # ahora deberiamos tener tantas epocas menos como las que dropeamos"
@@ -1289,7 +1308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1303,7 +1322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
