--- a/practical_lab_diplomatura.ipynb
+++ b/practical_lab_diplomatura.ipynb
@@ -82,6 +82,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si no tienen aún los paquetes instalados. Tienen que correr en su consola (también podría funcionar directo en una celda de jupyter notebook) para instalar los paquetes particulares de la clase de hoy\n",
+    "\n",
+    "`pip install mne`\n",
+    "\n",
+    "`pip install mne-bids`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -624,8 +635,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotear las épocas\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Inspección visual de épocas\n",
     "\n",
@@ -640,6 +663,11 @@
     "    <li>Marcar las épocas malas (en caso que existieran)</li>\n",
     "    <li>Marcar canales malos. En caso que todos los canales estuvieran bien, de todos modos seleccionar uno de los canales (haciendo click en el canal verán que se pone de un color gris mas claro) para que luego podamos practicar interpolar canales</li>\n",
     "    </ul>\n",
+    "        <i>tips</i>:\n",
+    "    <ul>\n",
+    "    <li> <i>Incluir los eventos: events y events_id</i></li>\n",
+    "    <li> <i>Asignar colores para cada condición pasando un diccionario = {'go':'red', 'no-go':'blue'}</i></li>\n",
+    "    </ul>\n",
     "</div>"
    ]
   },
@@ -649,8 +677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plotear las épocas\n",
-    "..."
+    "epochs..."
    ]
   },
   {
@@ -777,6 +804,15 @@
    "outputs": [],
    "source": [
     "ica.plot_sources(epochs, block=False, picks =range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ica.apply(epochs)"
    ]
   },
   {
@@ -972,7 +1008,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decoding"
+    "# Opcional: Decoding"
    ]
   },
   {
@@ -1293,9 +1329,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "mne",
    "language": "python",
-   "name": "python3"
+   "name": "mne"
   },
   "language_info": {
    "codemirror_mode": {
